--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "react-ts-admin",
+  "name": "antd-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "sass-loader": "^11.1.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
+    "add": "^2.0.6",
     "antd": "^4.15.5",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "mockjs": "^1.1.0",
-    "node-sass": "^6.0.0"
+    "node-sass": "^6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sass-loader": "^11.1.0",
+    "typescript": "^4.3.5",
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
